--- a/src/windows/WindowOrder.form
+++ b/src/windows/WindowOrder.form
@@ -411,7 +411,10 @@
         </Container>
         <Container class="javax.swing.JPanel" name="jPanel39">
 
-          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
+          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
+            <Property name="columns" type="int" value="0"/>
+            <Property name="rows" type="int" value="5"/>
+          </Layout>
           <SubComponents>
             <Component class="javax.swing.JComboBox" name="jcbTables">
               <Properties>
@@ -443,7 +446,10 @@
         </Container>
         <Container class="javax.swing.JPanel" name="jPanel41">
 
-          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
+          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
+            <Property name="columns" type="int" value="0"/>
+            <Property name="rows" type="int" value="5"/>
+          </Layout>
           <SubComponents>
             <Component class="javax.swing.JTextField" name="txtDiscount">
             </Component>
